Misahin header nav

--- a/application/views/loggedin-header.html
+++ b/application/views/loggedin-header.html
@@ -38,7 +38,7 @@
                   <li class="nav-item">
                     <div class="profile-dropdown">
                       <button class="profile-dropbtn">
-                          <img class="avatar" src="https://a.deviantart.net/avatars/default.gif" width="20" height="20" alt="" style="">
+                          <img class="avatar" src="https://a.deviantart.net/avatars/default.gif" width="20" height="20" alt="">
                         username
                       </button>
                       <div class="profile-dropdown-content dropdown-menu dropdown-menu-right">
@@ -73,10 +73,10 @@
               </div>
             </nav>
           <div class="contentsss">&nbsp;</div>
-            <div class="d-inline-flex p-2 bd-highlight">Content1</div>
+            <!-- <div class="d-inline-flex p-2 bd-highlight">Content1</div>
             <div class="contentes">Content2</div>
             <div class="contentes">Content3</div>
-            <div class="contentes">Content4</div>
+            <div class="contentes">Content4</div> -->
 
             <!--JS-->
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
