--- a/application/views/default-header.html
+++ b/application/views/default-header.html
@@ -44,7 +44,7 @@
               </ul>
             </div>
           </nav>
-          <nav class="navbar navbar-expand navbar-dark fixednav" id="myHeader">
+          <!-- <nav class="navbar navbar-expand navbar-dark fixednav" id="myHeader">
               <div class="" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item active">
@@ -86,6 +86,6 @@
                     header.classList.remove("sticky");
                   }
                 }
-        </script>
+        </script> -->
     </body>
 </html>
